--- a/build.properties
+++ b/build.properties
@@ -24,8 +24,9 @@
 # so that projects such as mondrian can run on the very latest; we switch for a
 # specific revision number near to a release. Change 'xxx' the latest subversion
 # change number; and put the same number in 'project.revision.minor'.)
-project.revision=TRUNK-SNAPSHOT
+#project.revision=TRUNK-SNAPSHOT
 #project.revision=1.0.0.xxx
+project.revision=alibaba
 
 project.revision.major=1
 project.revision.minor=03000000
